btn fix middle align

--- a/src/less/btn.less
+++ b/src/less/btn.less
@@ -8,6 +8,7 @@
 	font-size: @btn-font-size;
 	border-radius: @btn-border-radius;
 	padding: 0 28px;
+	padding-top: 3px; //fix for middle align
 	&:hover {
 		background-color: @btn-bg--hover;
 		text-decoration: none;
@@ -40,6 +41,7 @@
 		padding: 0;
 		border-bottom: 1px dashed;
 		border-radius: 0;
+		padding-top: 0;
 		&:hover {
 			background-color: transparent;
 			color: @gray-light;
