--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -886,7 +886,7 @@
 //  Кнопки
 //------------------------------------------------------------------------------
 
-@btn-line-height: 37px;
+@btn-line-height: 34px;
 @btn-bg: @orange-color;
 @btn-bg--hover: @orange-color--darken;
 @btn-text-color: #fff;
